...
    <string name="filter_all">All</string>
    <string name="filter_academic">Academic</string>
    <string name="filter_social">Social</string>
    <string name="filter_sports">Sports</string>
    <string name="filter_music">Music</string>
    <string name="filter_other">Other</string>
    <string name="filter_all_dates">All Dates</string>
    <string name="filter_spots_available">Spots Available</string>
    <string name="filter_waitlist_open">Waitlist Open</string>
    <string name="deletion_active">Deletion Active</string>
    <string name="enable_deletion">Deletion</string>
    <string name="all">All</string>
    <string name="entrant">Entrant</string>
...
